packages/next-swc/crates/next-dev-tests/tests/integration/next/error/ssr/input/pages/broken.tsx
export default function Page() {
  throw new Error('Broken page (expected error)')
}
